# contextual-code-assist

./: CONTRIBUTING.md  README.md  pyproject.toml
src/contextual_code_assist/: __init__.py  cli.py  main.py
tests/: test_main.py
