[tool.poetry]
name = "contextual-code-assist"
version = "0.1.0"
description = "AI-driven code completion that understands project context and dependencies."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tensorflow = "^2.8"  # or "torch" for PyTorch

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"